--- a/homework/homework_1_bonus/homework_1_bonus.tex
+++ b/homework/homework_1_bonus/homework_1_bonus.tex
@@ -19,6 +19,7 @@
 \usepackage{framed}
 \usepackage{setspace}
 \usepackage{changepage}
+\usepackage{graphicx}   
 
 \newmdenv[linecolor=NavyBlue,backgroundcolor=White]{myframe}
 \renewcommand\thesubfigure{(\Alph{subfigure})}
@@ -112,7 +113,24 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
-	
+    \phantom{ }
+	\begin{enumerate}
+        \item \phantom{ }
+        
+        \includegraphics[width=12em]{media/1.1.png}
+
+        $\{(x,y) \in \mathbb R^2:x^2+4y^2\leq16\}$
+
+        \item \phantom{ }
+        
+        \includegraphics[width=12em]{media/1.2.png}
+
+        $\{(x,y) \in \mathbb Z^2:x^2+4y^2\leq16\}$
+
+        \item \phantom{ }
+        
+        \includegraphics[width=12em]{media/1.3.png}
+    \end{enumerate}
 \end{soln}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{problem}
