finished hw_1_bonus

--- a/homework/homework_1_bonus/homework_1_bonus.tex
+++ b/homework/homework_1_bonus/homework_1_bonus.tex
@@ -61,7 +61,7 @@
 \headheight=14pt
 \pagestyle{fancy}
 \lhead{\emph{\textcolor{Gray}{Chapter 1 Bonus Homework}}}			%%  UPDATE THE VERSION HERE!!!
-\rhead{\emph{\textcolor{Gray}{student-name}}}			%%  ENTER/DELETE YOUR NAME HERE!!!
+\rhead{\emph{\textcolor{Gray}{Seven Lewis}}}			%%  ENTER/DELETE YOUR NAME HERE!!!
 \chead{\emph{\textcolor{Gray}{MATH 309}}}
 \cfoot{\thepage}
 \renewcommand{\headrulewidth}{0.35pt}
@@ -175,7 +175,7 @@ For these problems, you should justify your answers. You do not need to provide 
 		
 		\item True. $\{0\}$ and $\{1\}$ are subsets of $\mathbb N$ and thus members of $\mathcal F$.
 		Their intersection is $\varnothing$, thus $\displaystyle\bigcap_{n=1}^\infty A_n = \varnothing$.
-		$\varnothing$ is also a subset of $\mathbb N$ and thus a member of $\mathcal F$.  
+		$\varnothing$ is also a subset of $\mathbb N$ and finite, and thus a member of $\mathcal F$.  
 	\end{enumerate}
 \end{soln}
 
@@ -193,7 +193,47 @@ For these problems, you should justify your answers. You do not need to provide 
 \end{problem}
 
 \begin{soln}
+	\phantom{ }
+
+	\begin{enumerate}
+		\item \phantom{ }
+		
+		\includegraphics[width=12em]{media/3.1.png}
+
+		$\{(x,\frac{1}{2}\cos(x))\in \mathbb R^2:-2\pi \leq x \leq 2\pi\})$
 	
+		\item \phantom{ }
+		
+		\includegraphics[width=12em]{media/3.2.png}
+
+		$\{(x,\alpha\cos(x)\in\mathbb R^2: -2\pi \leq x \leq 2\pi,a\in\mathbb Z\}$
+
+		\item \phantom{ }
+		
+		\includegraphics[width=12em]{media/3.3-3.5.png}
+
+		$\{(-\frac{3\pi}{2},0),(-\frac{1\pi}{2},0),(\frac{\pi}{2},0),(\frac{3\pi}{2},0)\}$
+	
+		\phantom{ }
+
+		\phantom{ }
+
+		\phantom{ }
+
+		\item \phantom{ }
+		
+		\includegraphics[width=12em]{media/3.4.png}
+
+		$\{(x,y)\in\mathbb R^2: x \in [-2\pi,-\frac{3\pi}{2}) \cup (-\frac{3\pi}{2},-\frac{\pi}{2}) \cup (-\frac{\pi}{2},\frac{\pi}{2}) \cup (\frac{3\pi}{2},2\pi]\}$
+		
+		$\cup \{(-\frac{3\pi}{2},0),(-\frac{1\pi}{2},0),(\frac{\pi}{2},0),(\frac{3\pi}{2},0)\}$
+
+		\item \phantom{ }
+		
+		\includegraphics[width=12em]{media/3.3-3.5.png}
+
+		$\{(-\frac{3\pi}{2},0),(-\frac{1\pi}{2},0),(\frac{\pi}{2},0),(\frac{3\pi}{2},0)\}$
+	\end{enumerate}
 \end{soln}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
