fixed typos, improved readability

--- a/homework/homework_5/homework_5.tex
+++ b/homework/homework_5/homework_5.tex
@@ -117,14 +117,42 @@ For these problems, you should justify your answers. You do not need to provide 
 	\phantom{ }
     \begin{enumerate}
         \item $(26-5)^8 = 37,822,859,361$
-        \item $\frac{(26-5)!}{(25-5-8)!} = 106,661,318,400$
-        \item $5 \cdot 26^7 = 40,159,050,880$
-        \item $5 \cdot \frac{(26-1)!}{(26-1-7)!} = 12,113,640,000$
-        \item $26^8 - (26-5)^8 = 171,004,205,215$
-        \item $5 \cdot 8 \cdot \frac{(26-5)!}{(26-5-7)!} = 23,442,048,000$
-        \item $\frac{(26-1)!}{(26-1-7)!} - \frac{(26-1-5)!}{(26-1-5-7)!} = 2,032,027,200$
+        
+		\phantom{ }
+
+        \item $\displaystyle\frac{(26-5)!}{(26-5-8)!} = 8,204,716,800$
+		
+		\phantom{ }
+
+		\item $5 \cdot 26^7 = 40,159,050,880$
+				
+		\phantom{ }
+
+        \item $\displaystyle5 \cdot \frac{(26-1)!}{(26-1-7)!} = 12,113,640,000$
+        		
+		\phantom{ }
+
+		\item $26^8 - (26-5)^8 = 171,004,205,215$
+        		
+		\phantom{ }
+
+		\item $\displaystyle5 \cdot 8 \cdot \frac{(26-5)!}{(26-5-7)!} = 23,442,048,000$
+        		
+		\phantom{ }
+
+		\item $\displaystyle\frac{(26-1)!}{(26-1-7)!} - \frac{(26-1-5)!}{(26-1-5-7)!} = 2,032,027,200$
     \end{enumerate}
 \end{soln}
+		
+\phantom{ }
+		
+\phantom{ }
+		
+\phantom{ }
+		
+\phantom{ }
+		
+\phantom{ }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{problem}
@@ -134,18 +162,12 @@ For these problems, you should justify your answers. You do not need to provide 
 \begin{soln}
 	\phantom{ }
 
-    $\frac{13}{(13-2)!} \cdot {4 \choose 3} \cdot {4 \choose 2} = 1872$
+	\noindent $\text{select the two ranks}\cdot \text{pick 3 of the 4 available cards}\cdot\text{pick 2 of the available 4 cards}$
+
+	\noindent *note that ``order'' matters, as we need to pick one rank for three, and the other for two 
+
+    $\displaystyle\frac{13!}{(13-2)!} \cdot {4 \choose 3} \cdot {4 \choose 2} = 1872$
 \end{soln}
-
-\phantom{ }
-
-\phantom{ }
-
-\phantom{ }
-
-\phantom{ }
-
-\phantom{ }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{problem}
@@ -154,14 +176,11 @@ For these problems, you should justify your answers. You do not need to provide 
 
 \begin{soln}
 	\phantom{ }
-
-	\noindent 
-
 	
 	\noindent $\text{pick 5 seats in the front} \cdot \text{pick 4 seats in the back}
 	\cdot \text{place rest (including empty seats)}$
 
-	\noindent $({8 \choose 5}\cdot 5!) \cdot ({8 \choose 4} \cdot 4!) \cdot ({7 \choose 2} \cdot 5!) = 28,449,792,000$
+	\noindent $\displaystyle({8 \choose 5}\cdot 5!) \cdot ({8 \choose 4} \cdot 4!) \cdot ({7 \choose 2} \cdot 5!) = 28,449,792,000$
 
 \end{soln}
 
