finished hw_2_bonus

--- a/homework/homework_2_bonus/homework_2_bonus.tex
+++ b/homework/homework_2_bonus/homework_2_bonus.tex
@@ -110,7 +110,73 @@
 \end{problem}
 
 \begin{soln}
-	
+    \phantom{ }
+
+	\begin{enumerate}
+        \item \phantom{ }
+        
+        \noindent(a) $\forall n \in \mathbb N,\exists p \in {\text{primes}},((n > 1) \Rightarrow (p|n))$
+
+        \noindent(b) $\exists n \in \mathbb N, \forall p \in {\text{primes}},((n > 1) \land (p \nmid n))$
+
+        \noindent(c) There exists some natural number greater than 1 that is not
+        divisible by any prime number. 
+
+        \item \phantom{ }
+        
+        \noindent (a)
+        
+        $\forall f \in \text{\{continuous functions\}},\forall a \in \mathbb R, \forall \varepsilon \in \mathbb R, \exists \delta \in \mathbb R,
+        \forall x \in \mathbb R,$
+        
+        $((\epsilon > 0 \land \delta > 0 \land (|a - x| < \delta) ) \Rightarrow (|f(a) - f(x)|<\varepsilon))$
+
+        \noindent (b)
+
+        $\exists f \in \text{\{continuous functions\}},\exists a \in \mathbb R, \exists \varepsilon \in \mathbb R, \forall \delta \in \mathbb R,
+        \exists x \in \mathbb R,$
+        
+        $(\epsilon > 0 \land \delta > 0 \land (|a - x| < \delta) \land (|f(a) - f(x)| \geq \varepsilon))$
+
+        \noindent (c) 
+        
+        % \noindent There exists at least one continuous function that has at least one point where there exists
+        % no delta such that every $x$ in the range of $\delta$ $f(x)$ is in the range of $\varepsilon$, for all $\varepsilon$. 
+
+        \noindent There exists at least one continuous function that has at least one point where no matter
+        how small you make $\delta$, there will always be some $x$ within $\delta$ of $a$ that
+        has $f(x)$ beyond some $\varepsilon$ of $f(a)$. 
+
+        \phantom{ }
+
+        \phantom{ }
+
+        \phantom{ }
+
+        \phantom{ }
+
+        \item \phantom{ }
+        
+        \noindent $\displaystyle\vec{e_i} \text{ is the } i \text{th column of }I_\infty. $ 
+        
+        \noindent (a)
+        $\forall \vec{v},\exists \vec{c} \in \mathbb R^{\infty},(\vec{v} = \sum_{i=0}^\infty c_i\vec{e_i})$
+
+        \noindent (b)
+        $\exists \vec{v},\forall \vec{c} \in \mathbb R^{\infty},(\vec{v} \neq \sum_{i=0}^\infty c_i\vec{e_i})$
+        
+        \noindent (c) There exists some vector $v$ where there is no vector $\vec{c}$ times
+        the identity matrix that yields the vector $v$.
+
+        \item \phantom{ }
+        
+        \noindent (a) $(A \in X) \land (A \notin \mathscr P (X))$
+
+        \noindent (b) $(A \notin X) \lor (A \in \mathscr P (X))$
+        
+        \noindent (c) $A$ is either not in $X$ or $A$ is in $\mathscr P(X)$.
+
+    \end{enumerate}
 \end{soln}
 
 \end{document}
