slight changes to wording

--- a/homework/homework_2_bonus/homework_2_bonus.tex
+++ b/homework/homework_2_bonus/homework_2_bonus.tex
@@ -157,13 +157,13 @@
 
         \item \phantom{ }
         
-        \noindent $\displaystyle\vec{e_i} \text{ is the } i \text{th column of }I_\infty. $ 
+        \noindent $\displaystyle\vec{e_i} \text{ is the } i \text{th column of }I_n. $ 
         
         \noindent (a)
-        $\forall \vec{v},\exists \vec{c} \in \mathbb R^{\infty},(\vec{v} = \sum_{i=0}^\infty c_i\vec{e_i})$
+        $\forall n \in \mathbb N, \forall \vec{v} \in \mathbb R^n,\exists \vec{c} \in \mathbb R^n,(\vec{v} = \sum_{i=0}^n c_i\vec{e_i})$
 
         \noindent (b)
-        $\exists \vec{v},\forall \vec{c} \in \mathbb R^{\infty},(\vec{v} \neq \sum_{i=0}^\infty c_i\vec{e_i})$
+        $\exists n \in \mathbb N, \exists \vec{v} \in \mathbb R^n,\forall \vec{c} \in \mathbb R^n,(\vec{v} \neq \sum_{i=0}^n c_i\vec{e_i})$
         
         \noindent (c) There exists some vector $v$ where there is no vector $\vec{c}$ times
         the identity matrix that yields the vector $v$.
