--- a/homework/homework_1_bonus/homework_1_bonus.tex
+++ b/homework/homework_1_bonus/homework_1_bonus.tex
@@ -160,20 +160,22 @@ For these problems, you should justify your answers. You do not need to provide 
 	\phantom{ }
 	\begin{enumerate}
 		\item False. $\mathbb N$'s cardinality is $\aleph_0$ which is the smallest infinite cardinality.
-		\item False. In this context $\overline{A} = \mathbb N - A$. No matter how big $|A|$ is, $|A|
-		< |\mathbb N|$, so $|A| = |\mathbb N|$ and $\overline{A} \notin \mathcal F$.
-		\item False. There are an infinite number of finite (and infinite) subsets of $\mathbb N$. 
+		\item False. In this context $\overline{A} = \mathbb N - A$. No matter
+		how big $|A|$ is, $|A|$ is still finite and $|A| < |\mathbb N|$, so
+		$|\overline{A}| = |\mathbb N|$ and $\overline{A} \notin \mathcal F$.
+		\item False. There are an infinite number of finite (and infinite)
+		subsets of $\mathbb N$. 
 		
 		\noindent Consider $S = \{\{1\},\{2\},\{3\}\dots\} = \{\{x\}: x \in \mathbb N\}$.
 
-		\noindent $A \subseteq \mathcal F$ and $A$'s cardinality is clearly infinite, thus so is
+		\noindent $S \subseteq \mathcal F$ and $S$'s cardinality is clearly infinite, thus so is
 		$\mathcal F$'s. 
 
 		\item False. $\displaystyle\bigcup_{n=1}^\infty A_n$ \textit{is} $\mathbb N$. Consider $S$
 		from the previous subproblem, the union of the singletons as we reach all in $\mathbb N$ is
-		equal to $\mathbb N$. 
+		equal to $\mathbb N$. No natural numbers are excluded.
 		
-		\item True. $\{0\}$ and $\{1\}$ are subsets of $\mathbb N$ and thus members of $\mathcal F$.
+		\item True. $\{1\}$ and $\{2\}$ are finite subsets of $\mathbb N$ and thus members of $\mathcal F$.
 		Their intersection is $\varnothing$, thus $\displaystyle\bigcap_{n=1}^\infty A_n = \varnothing$.
 		$\varnothing$ is also a subset of $\mathbb N$ and finite, and thus a member of $\mathcal F$.  
 	\end{enumerate}
