problem 1 was changed by professor because of it's extreme difficulty

--- a/homework/homework_3_bonus/homework_3_bonus.tex
+++ b/homework/homework_3_bonus/homework_3_bonus.tex
@@ -102,13 +102,7 @@
 \begin{problem}
 	Let $\mathcal C$ be the unit circle, and let $A$ be a collection of 20 evenly spaced points on $\mathcal C$.
 	A straight segment connecting two points of $A$ is called a \emph{chord}.
-	A \emph{chord} that goes through the center of the circle is called a \emph{diameter}; diameters connect opposite points of $A$.
-	How many ways are there to...
-	\begin{enumerate}
-		\item Draw chords connecting 10 distinct pairs of points from $A$?
-		\item Draw chords connecting 10 distinct pairs of points from $A$ such that at least two of the chords are diameters?
-		\item Draw chords connecting 10 distinct pairs of points from $A$ such that exactly half of the chords are diameters?
-	\end{enumerate}
+	How many ways are there to draw 10 chords hitting all 20 points of $A$?
 \end{problem}
 
 \begin{soln}
