--- a/homework/homework_7/homework_7.tex
+++ b/homework/homework_7/homework_7.tex
@@ -1,4 +1,4 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%      IGNORE THIS FIRST PART        %%%%%%%%%%   EXCEPT TO ENTER/DELETE YOUR NAME WHERE INDICATED
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -18,6 +18,10 @@
 \usepackage[framemethod=default]{mdframed}
 \usepackage{framed}
 \usepackage{setspace}
+\usepackage{changepage}
+
+\setlength{\parindent}{0pt}
+
 \newmdenv[linecolor=NavyBlue,backgroundcolor=White]{myframe}
 \renewcommand\thesubfigure{(\Alph{subfigure})}
 \renewcommand\thesubfigure{(\Alph{subfigure})}
@@ -104,17 +108,85 @@ Prove the following propositions. Format your proof so each step of the proof is
 \end{proposition}
 
 \begin{prf}
-	Suppose that $x$ and $y$ are real numbers and that $x>y$.
-	
-	Then, $x-y>0$.
-	
-	Let $\varepsilon\in(0,x-y)$.
-	
-	Then we have $x-y\geq \varepsilon$.
+	\phantom{ }
 
-    \jeff{The above is an example of how to format your proof with one sentence on each line. Please do this when you submit your proofs!}
+	% Lemma: All integers $a$ have the same parity as $a^2$.
+
+	% \begin{adjustwidth}{2em}{0em} 
+	% 	\textbf{Case 1:} $a$ is even.
+		
+	% 	\begin{adjustwidth}{2em}{0em} 
+	% 		Then $a = 2x$ for some integer $x$.
+
+	% 		Expression $a^2$ becomes $(2x)^2 = 4x^2 = 2(2x^2)$.
+			
+	% 		So $a^2 = 2y$ where $y$ is the integer $2x^2$.
+
+	% 		Thus, $a^2$ is even.
+	% 	\end{adjustwidth}
+
+	% 	\textbf{Case 2:} $a$ is odd.
+
+	% 	\begin{adjustwidth}{2em}{0em} 
+	% 		Then $a = 2x + 1$ for some integer $x$.
+
+	% 		Expression $a^2$ becomes $(2x+1)^2 = 4x^2+4x+1 = 2(2x^2+2x)+1$.
+
+	% 		So $a^2 = 2y + 1$ where $y$ is the integer $2x^2+2x$.
+			
+	% 		Thus, $a^2$ is odd. 
+	% 	\end{adjustwidth}
+		
+	% \end{adjustwidth}
+
+	Suppose $a,b,c \in \mathbb Z$ such that $a^2 + b^2 = c^2$ and it's 
+	not the case that $a$ or $b$ is even.
+
+	Therefore, $a$ and $b$ are both odd.
+
+	So $a = 2x + 1$ and $b = 2y + 1$ for some integers $x$ and $y$.
+
+	Either $c$ is even or odd.
+
+	\textbf{Case 1:} $c$ is even.
+	\begin{adjustwidth}{2em}{0em} 
+		Then $c = 2z$ for some integer $x$.
+
+		The expression $a^2 + b^2 = c^2$ becomes $(2x + 1)^2 + (2y+1)^2 = 4z^2$.
+
+		Expanding the expression yields $4x^2 + 4x + 1 + 4y^2 + 4y + 1 = 4z^2$.
+
+		Factoring yields $4(x^2+y^2+x+y)+2 = 4z^2$.
+
+		Simplifying the expression shows $4k + 2 = 4j$ where $k$ and $j$ are
+		the integers $x^2+y^2+x+y$ and $4z^2$ respectfully. 
+
+		Observe that $2 = 4(k - j)$, thus $4|2$.
+		
+		We have arrived at contradiction.
+	\end{adjustwidth}
+
+	\textbf{Case 2:} $c$ is odd.
+	\begin{adjustwidth}{2em}{0em}
+		Then $c = 2z + 1$ for some integer $x$.
+
+		The expression $a^2 + b^2 = c^2$ becomes $(2x + 1)^2 + (2y+1)^2 = (2z+1)^2$.
+
+		Expanded and factored yields $2(2x^2 + 2x + 2y^2 + 2y + 1) = 2(2z^2 + 2z) + 1$
+
+		Simplifying the expression shows that $2k = 2j + 1$ for integers $k$ and $j$.
+
+		Therefore, an even number equals an odd number. We have arrived at contradiction.
+	\end{adjustwidth}
 \end{prf}
 
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
+
+\phantom{ }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{proposition}
 	Suppose $x,y\in\Z$.
